--- a/res/menu/media_preview.xml
+++ b/res/menu/media_preview.xml
@@ -4,17 +4,17 @@
     <item android:id="@+id/media_preview__forward"
           android:title="@string/media_preview__forward_title"
           android:icon="?menu_forward_icon"
-          app:showAsAction="always"/>
+          app:showAsAction="never"/>
     <item android:id="@+id/save"
           android:title="@string/media_preview__save_title"
           android:icon="@drawable/ic_download_filled_white_24"
-          app:showAsAction="always"/>
+          app:showAsAction="never"/>
     <item android:id="@+id/media_preview__overview"
           android:title="@string/media_preview__all_media_title"
           android:icon="@drawable/ic_photo_library_white_24dp"
-          app:showAsAction="ifRoom"/>
+          app:showAsAction="never"/>
     <item android:id="@+id/delete"
           android:title="@string/delete"
           android:icon="?menu_trash_icon"
-          app:showAsAction="ifRoom"/>
+          app:showAsAction="never"/>
 </menu>
