--- a/res/layout/recipient_preference_contact_widget.xml
+++ b/res/layout/recipient_preference_contact_widget.xml
@@ -6,20 +6,30 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView android:id="@+id/message"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               app:srcCompat="?attr/message_icon"
-               android:layout_marginEnd="20dp"/>
+    <ImageView
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        app:srcCompat="?attr/message_icon" />
 
-    <ImageView android:id="@+id/call"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:src="@drawable/ic_call_white_24dp"/>
+    <ImageView
+        android:id="@+id/call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_phone_right_unlock_solid_24" />
 
-    <ImageView android:id="@+id/secure_call"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:src="@drawable/ic_call_secure_white_24dp"/>
+    <ImageView
+        android:id="@+id/secure_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        app:srcCompat="@drawable/ic_video_solid_24" />
+
+    <ImageView
+        android:id="@+id/secure_call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_phone_right_solid_24" />
 
 </LinearLayout>
