--- a/res/values-v23/themes.xml
+++ b/res/values-v23/themes.xml
@@ -33,4 +33,18 @@
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:navigationBarColor">@color/core_grey_95</item>
     </style>
+
+    <style name="Theme.Design.Light.BottomSheetDialog.Fixed">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:statusBarColor">@color/transparent</item>
+    </style>
+
+    <style name="Theme.Design.BottomSheetDialog.Fixed">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:navigationBarColor">@color/core_grey_95</item>
+        <item name="android:statusBarColor">@color/transparent</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
+
 </resources>
