Make media overview view pager scrollable for long translations.

--- a/res/layout/media_overview_activity.xml
+++ b/res/layout/media_overview_activity.xml
@@ -25,10 +25,9 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
             android:background="?attr/media_overview_toolbar_background"
-            app:tabBackground="?attr/media_overview_toolbar_background"
             app:tabIndicatorColor="@color/textsecure_primary"
+            app:tabMode="scrollable"
             app:tabSelectedTextColor="@color/textsecure_primary" />
 
     </com.google.android.material.appbar.AppBarLayout>
