--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -313,6 +313,12 @@
 
         <item name="media_keyboard_button_color">@color/core_grey_60</item>
 
+        <item name="megaphone_background">@color/core_white</item>
+        <item name="megaphone_background_shadow">@drawable/megaphone_background_shadow</item>
+        <item name="megaphone_body_text_color">@color/core_grey_65</item>
+        <item name="megaphone_reactions_shade">@color/core_grey_02</item>
+        <item name="megaphone_reactions_close_tint">@color/core_black</item>
+
         <item name="menu_new_conversation_icon">@drawable/ic_add_white_24dp</item>
         <item name="menu_group_icon">@drawable/ic_group_solid_24</item>
         <item name="menu_search_icon">@drawable/ic_search_24</item>
@@ -555,6 +561,12 @@
         <item name="quick_mic_icon">@drawable/ic_mic_solid_24</item>
 
         <item name="media_keyboard_button_color">@color/core_grey_25</item>
+
+        <item name="megaphone_background">@color/core_grey_75</item>
+        <item name="megaphone_background_shadow">@null</item>
+        <item name="megaphone_body_text_color">@color/core_grey_25</item>
+        <item name="megaphone_reactions_shade">@color/core_grey_70</item>
+        <item name="megaphone_reactions_close_tint">@color/core_grey_15</item>
 
         <item name="menu_new_conversation_icon">@drawable/ic_add_white_24dp</item>
         <item name="menu_group_icon">@drawable/ic_group_solid_24</item>
