Trimming profile names to fit byte budget and remove leading/trailing spaces.

--- a/app/src/main/res/layout/profile_create_fragment.xml
+++ b/app/src/main/res/layout/profile_create_fragment.xml
@@ -120,9 +120,9 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="16dp"
                         android:layout_weight="1"
+                        android:autofillHints="given-name"
                         android:hint="@string/CreateProfileActivity_first_name_required"
                         android:inputType="textPersonName"
-                        android:maxLength="@integer/profile_name_part_max_length"
                         android:singleLine="true" />
 
                     <EditText
@@ -135,9 +135,9 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="16dp"
                         android:layout_weight="1"
+                        android:autofillHints="family-name"
                         android:hint="@string/CreateProfileActivity_last_name_optional"
                         android:inputType="textPersonName"
-                        android:maxLength="@integer/profile_name_part_max_length"
                         android:singleLine="true" />
                 </LinearLayout>
 
