Add back arrow to profile editor.

--- a/app/src/main/res/layout/profile_create_fragment.xml
+++ b/app/src/main/res/layout/profile_create_fragment.xml
@@ -22,6 +22,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:navigationIcon="@drawable/ic_arrow_left_24" />
+
                 <TextView
                     android:id="@+id/title"
                     style="@style/TextAppearance.Signal.Title2"
