--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -45,6 +45,12 @@
         <item name="android:textColor">@color/core_white</item>
     </style>
 
+    <style name="TextAppearance.Signal.Title1" parent="@style/TextAppearance.AppCompat.Title">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:color">?attr/title_text_color_primary</item>
+    </style>
+
     <style name="TextAppearance.Signal.Title2" parent="@style/TextAppearance.AppCompat.Title">
         <item name="android:textStyle">bold</item>
     </style>
